# NextGen

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AUDIT-2025-03-08.md  CLAUDE.md  Cargo.toml  Dockerfile  FACTION_SYSTEM_RESEARCH.md  MISSING_HANDLERS.md  Makefile  Open-LocalClient.ps1  Open-WorldEditor.ps1  QUEST_SYSTEM_RESEARCH.md  README.md  Start-LocalServer.ps1  docker-compose.yml  pgadmin-servers.json  skills-lock.json
.claude/: settings.local.json
client/: .gitignore  ArgentumNextgen.csproj  ArgentumNextgen.sln  TierrasSagradasAO.csproj  TierrasSagradasAO.sln  client.csproj  export_presets.cfg  project.godot
client/Data/: Options.ao  fonts.aopak  graficos.aopak  graphics.aopak  init.aopak  maps.aopak  sounds.aopak
client/Scenes/: Main.tscn
client/Scripts/: Main.Gameplay.cs  Main.Gameplay.cs.uid  Main.Setup.cs  Main.Setup.cs.uid  Main.cs  Main.cs.uid
client/Shaders/: fog_overlay.gdshader  vision_fog.gdshader
client/source/: ArgentumNextgen.csproj
docs/: 01-ARCHITECTURE.md  02-PROTOCOL.md  03-GAME-SYSTEMS.md  04-DATA-FORMATS.md  05-VB6-PARITY.md  06-MIGRATION-STATUS.md  AO-RESOURCE-SYSTEM.md  CLIENT-BUILD.md  DATABASE.md  DISCREPANCIAS-VB6-13.3.md  LINUX_DEPLOY.md  PROJECT-LAYOUT.md  README.md  RENDERING_COMPARISON.md  ROADMAP.md  SERVER-CONFIG.md  TROUBLESHOOTING.md
migrations/: 003_mount_system.sql
resources/: .env.example  README.md
server/: Server.ini  dat  maps  server.ini
src/: main.rs
src/db/: mod.rs  (+5 more)
tools/: copy_map_border.py  fix_border_exits.py  generate_aomap.py  inject_map_effects.py  swap_water_textures.py
(+4376 files in other folders)
