[package]
name = "ao-server"
version = "0.1.0"
edition = "2024"
description = "Tierras Sagradas AO - Game Server (Rust port)"

[[bin]]
name = "ao-server"
path = "server/source/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
argon2 = "0.5"
dotenvy = "0.15"
